<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/tittle"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/titulo"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="396dp"
        android:layout_height="315dp"
        android:layout_marginBottom="92dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent">


        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:columnCount="4"
            app:rowCount="5">

            <Button
                android:id="@+id/btClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btClear"
                app:layout_column="0"
                app:layout_row="0" />

            <Button
                android:id="@+id/btParentheses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btParentheses"
                app:layout_column="1"
                app:layout_row="0" />

            <Button
                android:id="@+id/btPercentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btPercentage"
                app:layout_column="2"
                app:layout_row="0" />

            <Button
                android:id="@+id/btDivision"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btDivision"
                app:layout_column="3"
                app:layout_row="0" />

            <Button
                android:id="@+id/bt7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt7"
                app:layout_column="0"
                app:layout_row="1" />

            <Button
                android:id="@+id/bt8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt8"
                app:layout_column="1"
                app:layout_row="1" />

            <Button
                android:id="@+id/bt9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt9"
                app:layout_column="2"
                app:layout_row="1" />

            <Button
                android:id="@+id/btTimes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btTimes"
                app:layout_column="3"
                app:layout_row="1" />

            <Button
                android:id="@+id/bt4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt4"
                app:layout_column="0"
                app:layout_row="2" />

            <Button
                android:id="@+id/bt5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt5"
                app:layout_column="1"
                app:layout_row="2" />

            <Button
                android:id="@+id/bt6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt6"
                app:layout_column="2"
                app:layout_row="2" />

            <Button
                android:id="@+id/btMinus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btMinus"
                app:layout_column="3"
                app:layout_row="2" />

            <Button
                android:id="@+id/bt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt1"
                app:layout_column="0"
                app:layout_row="3" />

            <Button
                android:id="@+id/bt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt2"
                app:layout_column="1"
                app:layout_row="3" />

            <Button
                android:id="@+id/bt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt3"
                app:layout_column="2"
                app:layout_row="3" />

            <Button
                android:id="@+id/btSum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btSum"
                app:layout_column="3"
                app:layout_row="3" />

            <Button
                android:id="@+id/btSignal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btSignal"
                app:layout_column="0"
                app:layout_row="4" />

            <Button
                android:id="@+id/bt0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt0"
                app:layout_column="1"
                app:layout_row="4" />

            <Button
                android:id="@+id/btDot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btDot"
                app:layout_column="2"
                app:layout_row="4" />

            <Button
                android:id="@+id/btEquals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btEquals"
                app:layout_column="3"
                app:layout_row="4" />


        </androidx.gridlayout.widget.GridLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
